--- a/app/views/content_items/index.html.erb
+++ b/app/views/content_items/index.html.erb
@@ -6,6 +6,12 @@
   <%= render partial: 'content_item', collection: @content_items %>
 </ul>
 
-<%= month_calendar do |date| %>
+<%= month_calendar(events: @publishing_targets) do |date, publishing_targets| %>
   <%= date %>
+  <% publishing_targets.each do |publishing_target| %>
+    <div>
+      <div><%= publishing_target.social_network.description %></div>
+      <div><%= publishing_target.content_item.title %></div>
+    </div>
+  <% end %>
 <% end %>
