--- a/app/views/content_items/show.html.erb
+++ b/app/views/content_items/show.html.erb
@@ -9,22 +9,20 @@
 
 <hr>
 
-<% unless @social_networks.blank? %>
-  <table>
-    <tr>
-      <th>Platform</th>
-      <th>publish date</th>
-      <th>Action</th>
-    </tr>
-    <% @social_networks.each do |social_network| %>
-    <tr>
-      <th><%= social_network.description %></th>
-      <th><%= social_network.publishing_target.publish_date.nil? ? "not specified" :  social_network.publishing_target.publish_date %></th>
-      <th>
-        <%= link_to "Edit publish date", edit_publishing_target_path(social_network.publishing_target) %>
-      </th>
-    </tr>
-    <% end %>
-  </table>
+<table>
+  <tr>
+    <th>Platform</th>
+    <th>publish date</th>
+    <th>Action</th>
+  </tr>
+  <% @publishing_targets.each do |publishing_target| %>
+  <tr>
+    <th><%= publishing_target.social_network.description %></th>
+    <th><%= publishing_target.publish_date.nil? ? "not specified" :  publishing_target.publish_date %></th>
+    <th>
+      <%= link_to "Edit publish date", edit_publishing_target_path(publishing_target) %>
+    </th>
+  </tr>
+  <% end %>
+</table>
   
-<% end %>
