--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,3 +19,11 @@
   text-align: center;
   font-size: 1.5em;
  }
+
+ .midle-nav-bar{
+   display: flex;
+ }
+
+ .filter-div{
+   border: 2px solid black;
+ }
